--- a/section1.Rmd
+++ b/section1.Rmd
@@ -43,23 +43,28 @@ Before we can get started working with data, we first need to load the data into
 in many file types, but the most common is a CSV, which stands for “comma-separated values”. Use the
 `read.csv()` function from the R package `readr` to read your data into R and call it `anrr`. You'll find the dataset under the folder `data`. This is the original data used in their study.
 
-
-
+```{r}
+anrr = read.csv("data/section1_df.csv")
+```
 
 ## Question 2: Inspecting the dataset I
 
 Use the `head()` function to view the first several rows of the data. What can you notice about the variable `gdppc`?
 
-
-
+```{r}
+head(anrr)
+#the "gdppc" is missing
+```
 
 ## Question 3: Inspecting the dataset II
 
 Use the function `glimpse()` to look at a summary of the dataset. What can you notice about the variable `dem`?
 
-
-
-
+```{r}
+library(dplyr)
+glimpse(anrr)
+#dem is missing
+```
 
 
 ## Question 4: Measuring democracy
@@ -68,9 +73,9 @@ There are many potential ways to code if a country is democratic or not. Researc
 
 Use the function `table` to see how many observations are democracies and how many autocracies in the data. (Hint: to tabulate the values of a variable, pass as arguments to `table` something of the form `dataframe$variable`). 
 
-
-
-
+```{r}
+table(anrr$dem)
+```
 
 ## Question 5
 
